Fix spacing and remove commented out code

--- a/services/payload/src/components/SideNav/SideNav.scss
+++ b/services/payload/src/components/SideNav/SideNav.scss
@@ -24,8 +24,8 @@
     flex-direction: column;
     height: 100vh;
     align-items: center;
-    // margin: 0;
     position: fixed;
+    z-index: 100;
 }
 
 .closed {
@@ -33,7 +33,7 @@
 }
 
 .open {
-    width: 302px;
+    width: 270px;
 }
 
 .navbar-icon-wrapper,
