--- a/services/payload/src/components/global.scss
+++ b/services/payload/src/components/global.scss
@@ -27,7 +27,7 @@
 }
 
 .template-default__wrap {
-  margin-left: 308px;
+  margin-left: 220px;
 }
 
 .nav__log-out {
